// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/components/RuleList/RuleBaseInfo render snap when dataSource is undefined 1`] = `
<body>
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              for="desc"
              title="规则"
            >
              规则
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-lk9s71"
                  id="desc"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-vertical"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <div />
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <section />
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              for="annotation"
              title="说明"
            >
              说明
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-lk9s71"
                  id="annotation"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              for="type"
              title="规则分类"
            >
              规则分类
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-lk9s71"
                  id="type"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              for="db_type"
              title="数据库类型"
            >
              数据库类型
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-lk9s71"
                  id="db_type"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`sqle/components/RuleList/RuleBaseInfo render snap when has_audit_power and has_rewrite_power is true 1`] = `
<body>
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              for="desc"
              title="规则"
            >
              规则
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-lk9s71"
                  id="desc"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-vertical"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <div>
                        desc cont
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <section>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center rule-audit-tag css-rncbf4"
                        >
                          <div
                            class="ant-space-item"
                          >
                            审核能力
                          </div>
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center rule-rewrite-tag css-rncbf4"
                        >
                          <div
                            class="ant-space-item"
                          >
                            重写能力
                          </div>
                        </div>
                      </section>
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              for="annotation"
              title="说明"
            >
              说明
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-lk9s71"
                  id="annotation"
                >
                  annotation text
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              for="knowledge"
              title="规则知识库"
            >
              规则知识库
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-lk9s71"
                  id="knowledge"
                >
                  <a
                    class="ant-typography css-dev-only-do-not-override-txh9fw"
                    href="/sqle/rule/knowledge/rule_name_a/mysql"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    查看更多
                  </a>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              for="type"
              title="规则分类"
            >
              规则分类
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-lk9s71"
                  id="type"
                >
                  a
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              for="db_type"
              title="数据库类型"
            >
              数据库类型
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-lk9s71"
                  id="db_type"
                >
                  mysql
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span>
        child note a
      </span>
    </form>
  </div>
</body>
`;

exports[`sqle/components/RuleList/RuleBaseInfo render snap when show knowledge 1`] = `
<body>
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              for="desc"
              title="规则"
            >
              规则
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-lk9s71"
                  id="desc"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-vertical"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <div>
                        desc cont
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <section />
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              for="annotation"
              title="说明"
            >
              说明
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-lk9s71"
                  id="annotation"
                >
                  annotation text
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              for="knowledge"
              title="规则知识库"
            >
              规则知识库
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-lk9s71"
                  id="knowledge"
                >
                  <a
                    class="ant-typography css-dev-only-do-not-override-txh9fw"
                    href="/sqle/rule/knowledge/rule_name_a/mysql"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    查看更多
                  </a>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              for="type"
              title="规则分类"
            >
              规则分类
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-lk9s71"
                  id="type"
                >
                  a
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              for="db_type"
              title="数据库类型"
            >
              数据库类型
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-lk9s71"
                  id="db_type"
                >
                  mysql
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span>
        child note a
      </span>
    </form>
  </div>
</body>
`;
